force-app/main/default/objects/Account/fields/Automated_Back_Deployments__c.field-meta.xml
<CustomField>
    <fullName>Automated_Back_Deployments__c</fullName>
    <label>Automated Back Deployments</label>
    <length>250</length>
    <type>Text</type>
</CustomField>