force-app/main/default/objects/Account/fields/Pipeline_Test__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Test__c</fullName>
    <label>Pipeline Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>