force-app/main/default/objects/Account/fields/Rollback__c.field-meta.xml
<CustomField>
    <fullName>Rollback__c</fullName>
    <label>Rollback</label>
    <length>250</length>
    <type>Text</type>
</CustomField>