force-app/main/default/objects/Account/fields/Updated_Test__c.field-meta.xml
<CustomField>
    <fullName>Updated_Test__c</fullName>
    <label>Updated Test</label>
    <length>250</length>
    <type>Text</type>
</CustomField>